--- a/spec/fixtures/items.yml
+++ b/spec/fixtures/items.yml
@@ -1,4 +1,154 @@
 ---
+item_1:
+  name: Awesome Plastic Car
+  description: Et sequi molestiae. Repellendus iste culpa et tempore neque a. Culpa
+    ad vel ratione libero magni quaerat.
+  price: !ruby/object:BigDecimal 18:0.5161E2
+  created_at: 2014-08-09 08:44:03.949873000 Z
+  updated_at: 2014-08-09 08:44:03.949873000 Z
+item_2:
+  name: Awesome Plastic Shoes
+  description: Assumenda praesentium et libero qui. Earum iste quam. Tenetur error
+    magnam atque. Et amet cumque eveniet.
+  price: !ruby/object:BigDecimal 18:0.7459E2
+  created_at: 2014-08-09 08:44:03.954882000 Z
+  updated_at: 2014-08-09 08:44:03.954882000 Z
+item_3:
+  name: Sleek Plastic Shoes
+  description: Quisquam consequatur non labore similique amet voluptatem ut. Eligendi
+    ut dolores fugit tempore dolor recusandae. Soluta nesciunt aut neque ea tempora
+    ab saepe. Consequatur qui sunt facilis.
+  price: !ruby/object:BigDecimal 18:0.9186E2
+  created_at: 2014-08-09 08:44:03.956891000 Z
+  updated_at: 2014-08-09 08:44:03.956891000 Z
+item_4:
+  name: Gorgeous Rubber Computer
+  description: Expedita rerum tempore ut voluptatem recusandae qui impedit. Rerum
+    laudantium odit dolor sed voluptatem voluptatibus. Ducimus repellat eveniet adipisci
+    occaecati eius. Cum ut ullam.
+  price: !ruby/object:BigDecimal 18:0.8069E2
+  created_at: 2014-08-09 08:44:03.958796000 Z
+  updated_at: 2014-08-09 08:44:03.958796000 Z
+item_5:
+  name: Small Granite Shirt
+  description: Numquam voluptates ex blanditiis reprehenderit adipisci. Voluptas magni
+    nihil. Nulla voluptatum nesciunt. Quisquam sunt iste quia est qui ut. Dolore eligendi
+    doloremque quas pariatur culpa.
+  price: !ruby/object:BigDecimal 18:0.6427E2
+  created_at: 2014-08-09 08:44:03.960657000 Z
+  updated_at: 2014-08-09 08:44:03.960657000 Z
+item_6:
+  name: Awesome Rubber Shoes
+  description: Sequi cupiditate delectus quibusdam saepe. Sint corrupti velit quisquam
+    ut maiores. Nostrum itaque enim quis consequatur rerum. Saepe temporibus quo suscipit.
+    Tempore minima sint dolores culpa.
+  price: !ruby/object:BigDecimal 18:0.1617E2
+  created_at: 2014-08-09 08:44:03.962440000 Z
+  updated_at: 2014-08-09 08:44:03.962440000 Z
+item_7:
+  name: Sleek Concrete Table
+  description: Rerum distinctio incidunt molestiae. Est pariatur laborum sed. Sint
+    quis eaque inventore autem repudiandae totam quae. Amet officiis eligendi sunt.
+  price: !ruby/object:BigDecimal 18:0.5296E2
+  created_at: 2014-08-09 08:44:03.964309000 Z
+  updated_at: 2014-08-09 08:44:03.964309000 Z
+item_8:
+  name: Small Granite Chair
+  description: Aspernatur sequi sint explicabo qui doloremque. Fuga soluta occaecati
+    sapiente minima ratione. Laborum non veritatis corporis. Sapiente quae tenetur.
+    Molestiae excepturi vitae accusantium sint quam sapiente.
+  price: !ruby/object:BigDecimal 18:0.1642E2
+  created_at: 2014-08-09 08:44:03.966409000 Z
+  updated_at: 2014-08-09 08:44:03.966409000 Z
+item_9:
+  name: Awesome Cotton Computer
+  description: Nam provident dolores. Dolor molestiae repellendus facere sunt iusto
+    aut. Est architecto nostrum. Velit doloribus quae omnis quos sit deleniti vel.
+  price: !ruby/object:BigDecimal 18:0.857E1
+  created_at: 2014-08-09 08:44:03.968288000 Z
+  updated_at: 2014-08-09 08:44:03.968288000 Z
+item_10:
+  name: Rustic Steel Gloves
+  description: Consequuntur aspernatur est quisquam illum necessitatibus harum vel.
+    Aut corrupti a autem iure quod. Dolorem a aliquam. Ducimus commodi earum saepe
+    quasi.
+  price: !ruby/object:BigDecimal 18:0.3299E2
+  created_at: 2014-08-09 08:44:03.970091000 Z
+  updated_at: 2014-08-09 08:44:03.970091000 Z
+item_11:
+  name: Fantastic Steel Car
+  description: Doloremque voluptates blanditiis. Magnam qui itaque dolores doloremque
+    necessitatibus consequuntur explicabo. Occaecati quos temporibus alias aliquam
+    esse magni odit. Ea enim eaque aut aliquam.
+  price: !ruby/object:BigDecimal 18:0.1964E2
+  created_at: 2014-08-09 08:44:03.971852000 Z
+  updated_at: 2014-08-09 08:44:03.971852000 Z
+item_12:
+  name: Practical Cotton Chair
+  description: Perferendis est et sed provident eaque dignissimos et. Aut eveniet
+    harum dignissimos et quas id. Aut harum consequuntur enim adipisci ex. Qui aspernatur
+    ipsam tempora inventore.
+  price: !ruby/object:BigDecimal 18:0.727E1
+  created_at: 2014-08-09 08:44:03.973661000 Z
+  updated_at: 2014-08-09 08:44:03.973661000 Z
+item_13:
+  name: Sleek Concrete Chair
+  description: Est repudiandae illo impedit labore iusto. Beatae architecto sequi
+    rem. Non recusandae blanditiis dignissimos consequatur labore velit. Sed velit
+    at sit. Nihil corrupti itaque maxime sed possimus et consectetur.
+  price: !ruby/object:BigDecimal 18:0.5316E2
+  created_at: 2014-08-09 08:44:03.975474000 Z
+  updated_at: 2014-08-09 08:44:03.975474000 Z
+item_14:
+  name: Ergonomic Rubber Car
+  description: Cumque aut velit. Ipsam aperiam explicabo aspernatur necessitatibus
+    dolore. Illum magnam magni molestias quos.
+  price: !ruby/object:BigDecimal 18:0.3488E2
+  created_at: 2014-08-09 08:44:03.977199000 Z
+  updated_at: 2014-08-09 08:44:03.977199000 Z
+item_15:
+  name: Fantastic Steel Hat
+  description: Voluptatem cumque qui aut. Nobis dolorum atque deleniti. Est aliquam
+    ipsam.
+  price: !ruby/object:BigDecimal 18:0.1629E2
+  created_at: 2014-08-09 08:44:03.978886000 Z
+  updated_at: 2014-08-09 08:44:03.978886000 Z
+item_16:
+  name: Ergonomic Wooden Pants
+  description: Rerum iste error praesentium vel iure. Est voluptatem odio error id
+    sed ipsam autem. Quis assumenda blanditiis. Dicta nesciunt qui illo quia delectus.
+  price: !ruby/object:BigDecimal 18:0.1368E2
+  created_at: 2014-08-09 08:44:03.980581000 Z
+  updated_at: 2014-08-09 08:44:03.980581000 Z
+item_17:
+  name: Practical Steel Shoes
+  description: Labore doloremque quam. Omnis beatae odio vitae est minima enim magni.
+    Omnis in expedita odio qui et.
+  price: !ruby/object:BigDecimal 18:0.9138E2
+  created_at: 2014-08-09 08:44:03.982677000 Z
+  updated_at: 2014-08-09 08:44:03.982677000 Z
+item_18:
+  name: Practical Concrete Gloves
+  description: Dignissimos est ut dolores. Dolorem amet aut quaerat velit. Incidunt
+    quod nemo doloremque sed tempora nobis. Rerum nihil tempora. Inventore dolore
+    excepturi et.
+  price: !ruby/object:BigDecimal 18:0.9491E2
+  created_at: 2014-08-09 08:44:03.984531000 Z
+  updated_at: 2014-08-09 08:44:03.984531000 Z
+item_19:
+  name: Incredible Concrete Shirt
+  description: Incidunt fuga nemo. Eligendi ab et deleniti sit. Vel quis minus neque
+    sed.
+  price: !ruby/object:BigDecimal 18:0.2214E2
+  created_at: 2014-08-09 08:44:03.986227000 Z
+  updated_at: 2014-08-09 08:44:03.986227000 Z
+item_20:
+  name: Small Concrete Shirt
+  description: Quidem voluptas omnis sed. Eos dolorem ea odio in nihil esse. Minus
+    praesentium fugit esse tempore in cupiditate. Inventore labore ut vel aut ducimus.
+  price: !ruby/object:BigDecimal 18:0.7581E2
+  created_at: 2014-08-09 08:44:03.987902000 Z
+  updated_at: 2014-08-09 08:44:03.987902000 Z
 item_21:
   name: Intelligent Rubber Car
   description: Fuga rem et qui doloribus praesentium omnis. Dolorum inventore nihil
